@startuml MarketHubBackendClassDiagram

!theme toy

' ------------------------------------------------------------------
' Core Entities
' ------------------------------------------------------------------

class User {
  + user_id: int <<PK>>
  --
  + username: str <<Unique>>
  + password_hash: str
  + role: str {customer, supplier}
  --
  + set_password(password)
  + check_password(password)
}

class Category {
  + category_id: int <<PK>>
  --
  + category_name: str <<Unique>>
}

class SubCategory {
  + subcategory_id: int <<PK>>
  + category_id: int <<FK>>
  --
  + subcategory_name: str
}

class Product {
  + product_id: int <<PK>>
  + supplier_id: int <<FK>>
  + category_id: int <<FK>>
  + subcategory_id: int <<FK>>
  --
  + product_name: str
  + description: text
  + price: Decimal
  + stock: int
  + is_available: bool
}


' ------------------------------------------------------------------
' Transaction Entities
' ------------------------------------------------------------------

class Cart {
  + cart_id: int <<PK>>
  + user_id: int <<FK>>
  + product_id: int <<FK>>
  --
  + quantity: int
  + added_at: datetime
}

class Order {
  + order_id: int <<PK>>
  + user_id: int <<FK>>
  --
  + order_date: datetime
  + total_amount: Decimal
  + status: str {pending, paid}
}

class OrderDetail {
  + detail_id: int <<PK>>
  + order_id: int <<FK>>
  + product_id: int <<FK>>
  --
  + quantity: int
  + price: Decimal <<Snapshot Price>>
  + total_price: Decimal
}

' ------------------------------------------------------------------
' Relationships
' ------------------------------------------------------------------

' User (Supplier) to Product
User "1" --> "*" Product : supplies

' Category to SubCategory
Category "1" --> "*" SubCategory : contains

' Category to Product
Category "1" --> "*" Product : classifies

' SubCategory to Product
SubCategory "0..1" --> "*" Product : refines

' User and Product via Cart (M-to-M)
User "1" -- "*" Cart : has
Product "1" -- "*" Cart : is_in_cart

' User to Order
User "1" -- "*" Order : places

' Order to OrderDetail
Order "1" -- "*" OrderDetail : consists_of

' Product to OrderDetail
Product "1" -- "*" OrderDetail : details_product

@enduml